--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "string": "~1.6.1",
     "lodash": "~2.2.1",
     "sendgrid-nodejs": "0.1.*",
-    "express": "3.4.8"
+    "express": "3.4.8",
+    "jade": "1.1.5"
   },
   "devDependencies": {
     "jshint": "~2.4.x"
