--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "sendgrid-nodejs": "0.1.*",
     "express": "3.4.8",
     "jade": "1.1.5"
+    "node-sqlserver": "0.1.0"
   },
   "devDependencies": {
     "jshint": "~2.4.x"
