--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "lodash": "~2.2.1",
     "sendgrid-nodejs": "0.1.*",
     "express": "3.4.8",
-    "jade": "1.1.5"
+    "jade": "1.1.5",
     "node-sqlserver": "0.1.0"
   },
   "devDependencies": {
