--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "lodash": "~2.2.1",
     "sendgrid-nodejs": "0.1.*",
     "express": "3.4.8",
-    "jade": "1.1.5",
-    "mssql": "0.5.0"
+    "jade": "1.1.5"
   },
   "devDependencies": {
     "jshint": "~2.4.x"
